# basic-vm-setup

./: .editorconfig  .gitignore  Makefile  README.md  client.toml  openssl.cnf  trigger.sh  vm-setup.sh
dnsblocklist/: .gitignore  ai_sites  deny_ips  deny_urls  generate_blocked_lists.sh  generate_blocklists.sh
parthandler/: 1_setuphandler.py
vars/: 2_nftables.conf.jinja  31_wg_nat.conf.jinja  32_wg_delete.conf  43_server.toml.jinja  44_wge_nft_allow.conf.jinja  45_wge_nft_delete.conf  91_cloud_boothook.sh  92_cloud_posthook_dnscrypt.sh  93_cloud_posthook_wge.sh  cloud-boothook.sh  cloud-config.tftpl  cloud-posthook.sh  dnscrypt_download.sh  nftables.conf  old-cloud-config-archive.yaml  user-script-file.yaml  wg_client.conf  wg_nat.conf  wg_nat_delete.conf  wg_server.conf
vm/: instantiate.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
wg-exchange/: CMakeLists.txt  CMakePresets.json
wg-exchange/cmake/: Finddbus-cxx.cmake  FindgRPC.cmake
wg-exchange/src/: CMakeLists.txt  conf_update.cxx  conf_update.h  device_handle.cxx  device_handle.h  hash_map.cxx  hash_map.h  hash_map.inl  service_dbus_handle.cxx  service_dbus_handle.h  wg-exchange-client.cxx  wg-exchange-server.cxx  wg_exchange.h  wg_exchange_client.cxx  wg_exchange_server.cxx
wg-exchange/src/ext_hacl_star/: CMakeLists.txt  Hacl_Curve25519_51.c  Hacl_Curve25519_51.h  Hacl_Krmllib.h
wg-exchange/src/protos/: wg_exchange.proto
